# edict-strategy-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: demo.yaml
scripts/: caf_daily_report.py
src/edict/: __main__.py
src/edict/cli/: app.py  templates.py
src/edict/core/: doctor.py  engine.py  loader.py  models.py  strategy.py
src/edict/hub/: server.py
src/edict/integrations/: wecom.py
src/edict/reporting/: caf_backtest.py  caf_log.py  caf_stats.py
src/edict/strategies/: demo.py
src/edict/tv/: analyzer.py  caf_watch.py  factor.py  marketdata.py  models.py  server.py
tests/: test_factor_signal.py  test_loader.py  test_new_project.py  test_run_from_config.py  test_tv_analyzer.py
